<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewModel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="96dp"
            android:textSize="18sp"
            android:text="@string/label_car_model" />

        <Button
            android:id="@+id/buttonUpdateModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update" />

        <Button
            android:id="@+id/buttonDeleteModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:layout_marginStart="8dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>